layout shift issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -253,7 +253,7 @@ p {
   }
 
   to {
-    transform: rotate(359deg);
+    transform: rotate(360deg);
   }
 }
 
@@ -276,8 +276,10 @@ p {
 }
 
 .wrapper {
-  width: 100.8vw;
-  height: 100vh;
+  /* width: 100.8vw; */
+  width: 100%;
+
+  height: 100%;
   /* display: grid; */
   /* grid-template-columns: 5.2% 94%; */
 
